--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,3 @@
 <a href="{{ site.baseurl }}">回到首页</a> 
-<h1>{{ page.title }}
+<h1><img src="{{ site.url }}/assets/3d.jpg"/ height="40" weight="40">{{ page.title }}
 <hr/>
